--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "set NODE_ENV=dev && nest start --watch",
+    "start:debug": "set NODE_ENV=dev && nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.4.15",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.4.15",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
