--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "jenkins": "^1.1.0",
+    "node-cache": "^5.1.2",
     "pg": "^8.14.1",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.2",
